tests/expected/task-1/err-notlocal-1.uc.out
---
test: run suites/task-1/err-notlocal-1.uc
---
suites/task-1/err-notlocal-1.uc:8:5: semantic error: identifier 'n' not declared
      n=10; // error: identifier not declared
      ^


exit: 1
